--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
 ,
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,6 +49,7 @@
         </activity>
         <activity
             android:name=".GetHeightActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
             android:label="@string/title_activity_db" >
         </activity>
         <activity
@@ -56,6 +59,12 @@
         <activity
             android:name=".TakingPhotoActivity2"
             android:label="@string/title_activity_taking_photo_activity2" >
+        </activity>
+        <activity
+            android:name=".GetDendrochronology"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_get_left_side_dendrochronology" >
         </activity>
     </application>
 
