--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         </activity>
         <activity
             android:name=".GetDendrochronology2"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
             android:label="@string/title_activity_get_dendrochronology2" >
         </activity>
     </application>
